examples/3D_Image_Toolkit/klee-out-0/test000002.ptr.err
Error: memory error: out of bound pointer
File: challenges/3D_Image_Toolkit/src/3dc.c
Line: 68
assembly.ll line: 14613
Stack: 
	#000014613 in cgc_ReadFile (px_list) at challenges/3D_Image_Toolkit/src/3dc.c:68
	#100016287 in cgc_menu () at challenges/3D_Image_Toolkit/src/main.c:79
	#200016590 in __klee_posix_wrapped_main (cgc_argc=1, cgc_argv) at challenges/3D_Image_Toolkit/src/main.c:236
	#300007066 in __user_main (argcPtr=1, argvPtr=90409792, envp=90409808) at /home/haoxin/haoxin-data/smu-research/klee/runtime/POSIX/klee_init_env.c:245
	#400000574 in __uClibc_main (=91515656, =1, =90409792, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#500000740 in main (=1, =90409792)
Info: 
	address: 1128775680
	next: object at 140451494042432 of size 1536
		MO71[1536] (no allocation info)
	prev: object at 123600896 of size 3072
		MO8107530[3072] allocated at cgc_menu():  %in_data = alloca [3072 x i8], align 16
